apps/remux/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: remux
  labels:
    name: remux
