apps/remux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remux
  namespace: remux
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - remux.erix-homelab.site
      secretName: erix-homelab-site-tls
  rules:
    - host: remux.erix-homelab.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: remux
                port:
                  number: 3000
